[package]
name = "wisp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
mongodb = "3.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower = "0.5.2"
futures = "0.3.31"
tower-http = { version = "0.6.6", features = ['cors'] }
